tests/baselines/reference/overloadsAndTypeArgumentArityErrors.errors.txt
==== tests/cases/compiler/overloadsAndTypeArgumentArityErrors.ts (2 errors) ====
    declare function Callbacks(flags?: string): void;
    declare function Callbacks<T>(flags?: string): void;
    declare function Callbacks<T1, T2>(flags?: string): void;
    
    Callbacks<number, string, boolean>('s'); // wrong number of type arguments
    ~~~~~~~~~
!!! overloadsAndTypeArgumentArityErrors.ts(5,1): error TS4027: Signature expected 1 type arguments, got 3 instead.
    new Callbacks<number, string, boolean>('s'); // wrong number of type arguments
        ~~~~~~~~~
!!! overloadsAndTypeArgumentArityErrors.ts(6,5): error TS4027: Signature expected 1 type arguments, got 3 instead.